# zrive-ds

./: .gitignore  Makefile  mypy.ini  processed_data_frame.csv  pyproject.toml
models/: active_model.pkl  active_threshold.txt  classification_pipeline.pkl  model_registry.json  optimal_threshold.txt
models/v_20250516_112443/: metadata.json  model.pkl
src/module_1/: README.md  api_utils.py  config.py  models.py  module_1_meteo_api.py  plotting.py
src/module_2/: README.md  eda_groceries_1.ipynb  eda_groceries_1.markdown  eda_groceries_2.ipynb  eda_groceries_2.markdown  prueba.ipynb
src/module_3/: README.md  config.py  main.py  notebook.ipynb  notebook.markdown  predict.py  preprocessing.py  prueba.ipynb  train.py
src/module_3/models/: classification_pipeline.pkl  optimal_threshold.txt
src/module_4/: README.md  config.py  notebook.ipynb  predict.py  push_model.py  split.py  train.py  utils.py
src/module_5/: README.md  module5.ipynb
src/module_6/: app.py  config.py  logger.py  tarea_basket_model_api.md
src/module_6/basket_model/: basket_model.py  feature_store.py
src/module_6/services/: prediction_service.py
src/module_7/: REAMDE.md  app.py  config.py  constants.py  download_files_script.py  logger.py  tarea_basket_model_api.md
src/module_7/basket_model/: basket_model.py  feature_store.py
tests/module_1/: test_meteo_api.py
tests/module_3/: test_predict.py  test_preprocessing.py  test_train.py
tests/module_4/: test_utils.py
tests/module_7/: conftest.py  test_endpoints.py  test_models.py  test_prediction_service.py
(+6 files in other folders)
