[tool.poetry]
name = "zrive-ds"
version = "0.1.0"
description = "Project for the program Zrive Applied Data Science"
authors = ["Guille Barquero <gb@zriveapp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
numpy = "^1.25.2"
requests = "^2.31.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest = "^7.4.0"
scikit-learn = "^1.4.1.post1"
seaborn = "^0.13.2"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
boto3 = "^1.38.6"
python-dotenv = "^1.1.0"
fastparquet = "^2024.11.0"
lightgbm = "^4.6.0"
plotnine = "^0.14.5"
pyarrow = "^20.0.0"
shap = "^0.47.2"
uvicorn = "^0.34.3"
fastapi = "^0.115.12"


[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.2.3.250308"
types-requests = "^2.32.0.20250328"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
